# xmltree-haskell

./: CHANGELOG.md  README.md  example.xml  output.txt  xmltree.cabal
app/: Main.hs  Rio.hs
app/Xml/: Handle.hs
src/Data/: XmlToken.hs  XmlTree.hs
src/Data/Xml/: Error.hs  Parse.hs  Token.hs  Tree.hs
test/: Test.hs
