cabal-version:      2.4
name:               xmltree
version:            0.1.0.0

author:             redotter
maintainer:         arthemy.ryzhov@gmail.com

extra-source-files: CHANGELOG.md

executable xmltree
    main-is:          Main.hs
    other-modules:
        Rio
        , Xml.Handle
    build-depends:
        base ^>=4.16
        , xmltree
        , mtl
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -fwarn-unused-imports

library
    exposed-modules:
        Data.Xml.Parse
        , Data.Xml.Token
        , Data.Xml.Error
        , Data.Xml.Tree
    build-depends:
        base ^>=4.16
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -fwarn-unused-imports

test-suite xmltree-test
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    build-depends:
      xmltree
      , base ^>=4.16
      , HUnit
    hs-source-dirs:   test
    default-language: Haskell2010
